--- a/css/signUp.css
+++ b/css/signUp.css
@@ -26,6 +26,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    overflow: auto;
 }
 
 .navbar {
@@ -177,6 +178,7 @@ body {
     animation: slideIn 0.8s ease-out forwards;
     animation-delay: 1s;
     opacity: 0;
+    padding-top: 20px;
 }
 
 .form-check-input:hover {
@@ -187,6 +189,7 @@ body {
     animation: slideIn 0.8s ease-out forwards;
     animation-delay: 1.1s;
     opacity: 0;
+    padding-top: 20px;
 }
 
 .legal-btn-container {
@@ -194,6 +197,7 @@ body {
     animation: slideIn 0.8s ease-out forwards;
     animation-delay: 1.2s;
     opacity: 0;
+    padding-top: 20px;
 }
 
 .sign-in-btn {
